(executables
 (names
  cgi
  client_cert
  counter
  echo
  eio_backend
  hello
  guestbook
  log
  rate_limit
  stream
  vhost
  proxy)
 (libraries
  ipaddr
  eio_main
  mehari
  mehari.eio
  mehari.eio_unix
  mehari.lwt_unix
  mirage-crypto-rng-eio
  logs
  logs.fmt
  uri))

(alias
 (name all)
 (deps
  (glob_files *.exe)))

(alias
 (name all.bc)
 (deps
  (glob_files *.bc)))
